Remove deprecated methods from GUtil

--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_6.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_6.adoc
@@ -162,6 +162,10 @@ The `ImmutableFileCollection` type has been removed.
 Use the link:{javadocPath}/org/gradle/api/file/ProjectLayout.html#files-java.lang.Object...- factory method instead.
 A handle to the project layout can be obtained via link:{javadocPath}/org/gradle/api/Project.html#getLayout--.
 
+=== Removal of `GUtil.addToCollection()` methods
+
+The deprecated, vararg-taking `addToCollections()` methods have been removed and replaced with their non-vararg variants.
+
 === Deprecations
 
 [[missing_dependencies]]
